<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:color="@android:color/holo_blue_dark"
        android:id="@+id/ic_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/ic_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ic_user"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/ic_user"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ic_basket"
        android:enabled="true"
        android:icon="@drawable/ic_basket"
        android:title="@string/ic_basket"
        app:showAsAction="ifRoom" />

    <item
        android:color="@color/white"
        android:id="@+id/ic_menu"
        android:enabled="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/ic_menu"
        app:showAsAction="ifRoom" />

</menu>